# OBRAG

./: .gitignore  README.md  config.ini  main.py  pipeline_demo.ipynb  pyproject.toml  rag_utils.py  requirements.txt
app/: DEFAULTS.py  RAG.py  dataloader.py  utils.py
src/obrag/: cli.py  config.py  indexing.py  utils.py
tests/: test.py
